<resources>
    <string name="app_name">Divyanshi Sahu</string>
    <string name="title_activity_text_editing">text_editing</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="font">Font</string>
    <string name="add">ʌ</string>
    <string name="add_text">Add Text</string>
    <string name="minus">v</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="hello_user">Hello User!</string>
</resources>