<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    tools:context=".text_editing">

    <!-- Font Selector (Spinner) -->
    <TextView
        android:id="@+id/fontLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"/>

    <Spinner
        android:id="@+id/fontSpinner"
        android:layout_width="200dp"
        android:popupBackground="@color/colorPrimary"
        android:foregroundTint="@color/colorText"
        android:fadingEdge="horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@id/fontLabel"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="16dp" />

    <!-- Size Adjuster with Vertical Buttons -->
    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="15sp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_below="@id/fontSpinner"
        android:layout_marginTop="50dp"
        android:layout_marginStart="66dp"/>

    <LinearLayout
        android:id="@+id/sizeAdjusterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sizeLabel"
        android:layout_marginStart="66dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sizeEditText"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:inputType="number"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <Button
                android:id="@+id/increaseSizeButton"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:padding="0dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/add"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:textAlignment="gravity" />

            <Button
                android:id="@+id/decreaseSizeButton"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:padding="0dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/minus"
                android:textSize="15sp"
                android:textColor="@color/colorText" />
        </LinearLayout>
    </LinearLayout>

    <!-- Color Adjuster -->
    <TextView
        android:id="@+id/colorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="15sp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_below="@id/fontSpinner"
        android:layout_toEndOf="@+id/sizeLabel"
        android:layout_marginTop="50dp"
        android:layout_marginStart="140dp" />

    <!-- Color Preview View -->

    <Spinner
        android:id="@+id/colorAdjusterButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/colorLabel"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:fadingEdge="horizontal"
        android:layout_marginEnd="50dp"
        android:entries="@array/font_names_" />

    <!-- Add Text Button -->
    <EditText
        android:id="@+id/addTextButton"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fontSpinner"
        android:layout_marginTop="250dp"
        android:textColorHint="@color/colorText"
        android:imeOptions="actionDone"
        android:text="@string/add_text"
        android:inputType="text" />
</RelativeLayout>
